# python_template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  setup.bat  setup.sh
.github/workflows/: ci.yml
frontend/: package.json
frontend/src/lib/: api.ts
frontend/src/routes/: +page.svelte
src/myapp/: main.py
src/myapp/routers/: health.py
src/myapp/ui/: main_window.py
tests/: test_main.py
