[project]
name = "myapp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-qt"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["myapp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
